# knrcc

./: .gitignore  CMakeLists.txt  cc.c
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
c/: array_sizes.h  c0.h  c00.c  c01.c  c02.c  c03.c  c04.c  c05.c  c1.h  c10.c  c11.c  c12.c  c13.c  c2.h  c20.c  c21.c  cvopt.c
docs/: knrcc_architecture.md  knrcc_type_system.md  modernization_best_practices.md  modernization_progress.md
investigation/pass1_analysis/: c11_function_usage.txt
type_audit/: audit_log.txt  declarations_normalized.txt
type_audit/conflicts/: declarations_without_implementations.txt  declared_and_implemented.txt  implementations_without_declarations.txt  initial_conflicts.diff
type_audit/declarations/: all_h_decls.txt  c0_h_decls.txt  c1_h_decls.txt  c2_h_decls.txt  declarations.txt
type_audit/implementations/: all_c_impls.txt  c00_c_impls.txt  c01_c_impls.txt  c02_c_impls.txt  c03_c_impls.txt  c04_c_impls.txt  c10_c_impls.txt  c11_c_impls.txt  c12_c_impls.txt  c20_c_impls.txt  c21_c_impls.txt  cc_c_impls.txt  cvopt_c_impls.txt  implementations.txt
